deploy/kubernetes/resources/nginx/nginx-default-backend-deployment.yaml
---
  apiVersion: "extensions/v1beta1"
  kind: "Deployment"
  metadata: 
    name: "nginx-default-backend"
  spec: 
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "nginx-default-backend"
      spec: 
        terminationGracePeriodSeconds: 60
        containers: 
          - 
            name: "nginx-default-backend"
            image: "gcr.io/google_containers/defaultbackend:1.0"
            livenessProbe: 
              httpGet: 
                path: "/healthz"
                port: 8080
                scheme: "HTTP"
              initialDelaySeconds: 30
              timeoutSeconds: 5
            ports: 
              - 
                containerPort: 8080
            resources: 
              limits: 
                cpu: "10m"
                memory: "20Mi"
              requests: 
                cpu: "10m"
