deploy/kubernetes/resources/nginx/nginx-deployment.yaml
---
  apiVersion: "extensions/v1beta1"
  kind: "Deployment"
  metadata: 
    name: "nginx-ingress-controller"
  spec: 
    replicas: 1
    template: 
      metadata: 
        labels: 
          k8s-app: "nginx-ingress-lb"
      spec: 
        terminationGracePeriodSeconds: 60
        containers: 
          - 
            name: "nginx-ingress-controller"
            image: "gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.10"
            readinessProbe: 
              httpGet: 
                path: "/healthz"
                port: 18080
                scheme: "HTTP"
            livenessProbe: 
              httpGet: 
                path: "/healthz"
                port: 18080
                scheme: "HTTP"
              initialDelaySeconds: 10
              timeoutSeconds: 5
            args: 
              - "/nginx-ingress-controller"
              - "--default-backend-service=$(POD_NAMESPACE)/nginx-default-backend"
            ports: 
              - 
                containerPort: 80
              - 
                containerPort: 443
