deploy/kubernetes/resources/nginx/nginx-default-backend-service.yaml
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "nginx-default-backend"
  spec: 
    ports: 
      - 
        port: 80
        targetPort: 8080
    selector: 
      app: "nginx-default-backend"
