deploy/kubernetes/resources/nginx/nginx-service.yaml
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "nginx-ingress"
  spec: 
    type: "LoadBalancer"
    ports: 
      - 
        port: 80
        name: "http"
      - 
        port: 443
        name: "https"
    selector: 
      k8s-app: "nginx-ingress-lb"
